# polybot

./: AGENTS.md  pyproject.toml  test.py
data/: event_scores.json
scripts/: analyze_events.py  pull_events.py  pull_trades.py  relate_events.py  score_events.py
utils/: __init__.py  embed.py  llm.py  sdk.py
